--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
+    "build:dev": "vite build --mode development"
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
